--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "command-line-args": "^5.1.1",
     "copy-dir": "^1.3.0",
+    "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^3.6.0",
     "dotenv-webpack": "^2.0.0",
     "eslint": "^7.8.1",
